--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,16 @@ services:
       - 1025:1025
       - 8025:8025
 
+  redis:
+    image: redis:alpine
+    restart: always
+    command: [ "sh", "-c", "redis-server --requirepass \"$REDIS_PASSWORD\"" ]
+    env_file: .env
+    volumes:
+      - redis:/data/redis
+    ports:
+      - '6379:6379'
+
 volumes:
   postgres:
   redis:
