--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
-  "name": "app",
+  "name": "worktalk",
   "private": "true",
+  "scripts": {
+    "build": "THEME=\"light\" node esbuild.config.js",
+    "build:css": "bin/link; THEME=\"light\" yarn build; yarn light:build:css; yarn light:build:mailer:css",
+    "light:build:css": "THEME=\"light\" NODE_PATH=./node_modules tailwindcss -c tailwind.config.js -i $(bundle exec bin/theme tailwind-stylesheet light) -o ./app/assets/builds/application.light.css --postcss ./postcss.config.js",
+    "light:build:mailer:css": "NODE_PATH=./node_modules tailwindcss -c $(bundle exec bin/theme tailwind-mailer-config light) -i $(bundle exec bin/theme tailwind-stylesheet light) -o ./app/assets/builds/application.mailer.light.css --postcss ./postcss.mailer.config.js",
+    "start:dev": "foreman start -f ./Procfile.dev"
+  },
   "dependencies": {
     "@bullet-train/bullet-train": "^1.0.72",
     "@bullet-train/bullet-train-sortable": "^1.0.2",
@@ -33,10 +40,9 @@
     "tailwindcss": "^3.2.4",
     "yalc": "^1.0.0-pre.53"
   },
-  "scripts": {
-    "build": "THEME=\"light\" node esbuild.config.js",
-    "build:css": "bin/link; THEME=\"light\" yarn build; yarn light:build:css; yarn light:build:mailer:css",
-    "light:build:css": "THEME=\"light\" NODE_PATH=./node_modules tailwindcss -c tailwind.config.js -i $(bundle exec bin/theme tailwind-stylesheet light) -o ./app/assets/builds/application.light.css --postcss ./postcss.config.js",
-    "light:build:mailer:css": "NODE_PATH=./node_modules tailwindcss -c $(bundle exec bin/theme tailwind-mailer-config light) -i $(bundle exec bin/theme tailwind-stylesheet light) -o ./app/assets/builds/application.mailer.light.css --postcss ./postcss.mailer.config.js"
+  "engines": {
+    "node": ">=16.x",
+    "npm": ">=8.x",
+    "yarn": ">=1.x"
   }
 }
